fix: increase spacing for mobile div

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -295,7 +295,7 @@ html {
   --video-height: 100%;
   --video-iframe-height: calc(((100vw * 0.7) - 2*var(--video-border-width)) * 0.5625);
   --video-width: 100%;
-  --wrapper-div-margin-mobile:0;
+  --wrapper-div-margin-mobile:0 0 1rem 0;
   --wrapper-div-margin:0 2rem 0 0;
   --wrapper-li-background-size: 1rem;
   --wrapper-li-padding:0 0 0.5rem 2rem;
